# watchpup-kvm

./: .gitignore  AGENTS.md  CONTEXT.md  README.md  package.json
.sandcastle/: copy-context.mjs  project.config.ts
.sandcastle/prompts/: feedback.md  issue.md  review.md
docs/adrs/: 0001-product-vision-and-v1-boundary.md  0002-initial-firmware-platform-and-hardware-path.md  0003-firmware-subsystems-and-diagnostics-first.md  0004-frame-ownership-and-mjpeg-backpressure.md  0005-web-assets-and-hid-control-safety.md  0006-local-single-administrator-authentication.md  README.md
docs/agents/: advisor-plan-checkpoint.md  development-loop.md  domain.md  issue-tracker.md  triage-labels.md
docs/firmware/: diagnostics-endpoint-contract.md  esp32-p4-tc358743-first-diagnostics-bring-up-sequence.md  hid-control-protocol-and-safety-spec.md  mjpeg-frame-ownership-contract.md  web-asset-pipeline.md
docs/hardware/: bench-validation-log.md  initial-hardware-configuration-contract.md  tc358743-bridge-driver-design-notes.md
docs/prds/: README.md  incremental-esp32-p4-hardware-validation-path.md  (+3 more)
firmware/: CMakeLists.txt  README.md  sdkconfig.defaults  sdkconfig.defaults.esp32p4
firmware/main/: CMakeLists.txt  app_main.c  board_config.c  board_config.h  board_health.c  board_health.h  bridge_tc358743.c  bridge_tc358743.h  capture_csi.c  capture_csi.h  diagnostics.c  diagnostics.h  idf_component.yml
tools/: validate-phase1.mjs  validate-phase1.test.mjs  validate-phase2.mjs  validate-phase2.test.mjs
web/: index.html  package.json  tsconfig.json  vite.config.ts
(+11 files in other folders)
